test/files/neg/t7289.check
t7289.scala:8: error: implicit error;
!I e: Schtroumpf[Nil.type]
Test.schtroumpf invalid because
!I minorSchtroumpf: Schtroumpf[T]
  implicitly[Schtroumpf[Nil.type]]
            ^
1 error
